# goertzel

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: ci.yml
R/: goertzel.R
cmake/: goertzelConfig.cmake.in
inst/include/goertzel/: goertzel.hpp  goertzel_c.h
man/: goertzel-package.Rd  goertzel.Rd
python/: goertzel_module.cpp
src/: Makevars.win  goertzel.cpp  goertzel_c.cpp
tests/: dtmf_test.cpp
